--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "moment": "^2.18.1",
-    "simple-headless-chrome": "^4.3.1"
+    "puppeteer": "^1.2.0"
   },
   "scripts": {
     "start": "node src/index.js"
