--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "moment": "^2.18.1",
-    "puppeteer": "^1.2.0"
+    "puppeteer": "^1.2.0",
+    "puppeteer-extra": "^2.1.3",
+    "puppeteer-extra-plugin-stealth": "^2.2.2"
   },
   "scripts": {
     "start": "node src/index.js"
